tests/src/frontend/typechecking/invalid/await_outside_async.sk
async fun g(): ^String {
  "OK\n"
}

fun f(): String {
  await g() // error, await within non-async fun
}
